--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ body {
   padding: 30px 20px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  background: #fff;
+  background: rgb(110, 106, 106);
   transition: all ease-in-out 0.3s;
   height: 100%;
 }
