added visual affects to tables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,13 +78,19 @@ body {
 }
 
 
-/*
- * Cover
- */
+/*--------------------------------------------------------------
+# Cover
+--------------------------------------------------------------*/
 .cover {
   padding: 3rem 1.5rem;
 }
 
+/*--------------------------------------------------------------
+# Container
+--------------------------------------------------------------*/
+.container {
+  padding-bottom: 20px;
+}
 
 /*--------------------------------------------------------------
 # Games
@@ -111,6 +117,19 @@ body {
 }
 .Games .icon-box:hover {
   background: #1b1b1b;
+}
+
+/*--------------------------------------------------------------
+# Check list & table functionality
+--------------------------------------------------------------*/
+/* Darker background-color on hover */
+tbody tr:hover {
+  background: rgb(94, 94, 94);
+}
+
+.button {
+  background: #fff;
+  padding: 10px;
 }
 
 
