Marks section added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,9 @@ body {
 .cover {
   padding: 3rem 1.5rem;
 }
+.cover-heading {
+  padding-top: 20px;
+}
 
 /*--------------------------------------------------------------
 # Container
@@ -117,6 +120,13 @@ body {
 }
 .Games .icon-box:hover {
   background: #1b1b1b;
+}
+
+/*--------------------------------------------------------------
+# Marks
+--------------------------------------------------------------*/
+.marks {
+  padding-top: 50px;
 }
 
 /*--------------------------------------------------------------
